test/error/sema/enum-call-as-function.dsk
let S = enum
    A
    B
end

echo(S())
